ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-proxy
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: php.test
      http:
        paths:
          - path: /
            backend:
              serviceName: proxy-service
              servicePort: 80
